<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuBorrado"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_menu_guardado"
        android:textAlignment="center"
        android:textSize="@dimen/tamanio_titulos"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/edit_text_nombre_guardar_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edit_text_nombre"
        android:inputType="textCapWords|text"
        android:textAlignment="center"
        android:layout_margin="15dp"/>
    <EditText
        android:id="@+id/edit_text_nombre_guardar_usuario_apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edit_text_apellidos"
        android:inputType="textCapWords|text"
        android:textAlignment="center"
        android:layout_margin="15dp"/>
    <EditText
        android:id="@+id/edit_text_codigo_guardar_alumno"
        android:layout_gravity="center"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_codigo_text_codigo"
        android:inputType="number"
        android:layout_margin="15dp"
        />
    <Button
        android:id="@+id/boton_guardar_alumno"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_guardar"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/boton_fin_guardar_alumno"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_fin"
        android:layout_gravity="center"/>


</LinearLayout>