<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/titulo_base_de_datos"
     android:textAlignment="center"
     android:textStyle="bold"
     android:textSize="@dimen/tamanio_titulos"
     />

  <Button
      android:id="@+id/boton_menu_insertar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/menu_insetar"/>
    <Button
        android:id="@+id/boton_menu_borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_borrar"/>
    <Button
        android:id="@+id/boton_menu_ver_todos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_consular_todos"/>

</LinearLayout>